Fix misaligned heading

--- a/src/scss/_datepicker.scss
+++ b/src/scss/_datepicker.scss
@@ -210,7 +210,7 @@ table tbody tr:nth-child(even) {
 #month-label{
 	display:inline-block;
 	padding-top: 0.5rem;
-
+	margin-top: 0;
 	font-size: 1.6rem;
 	margin-bottom: 1rem;
 }
